--- a/src/main/resources/assets/minosoft/eros/main/about/about.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/about/about.fxml
@@ -14,6 +14,7 @@
   -->
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
@@ -33,6 +34,7 @@
                 <RowConstraints vgrow="NEVER"/>
                 <RowConstraints vgrow="NEVER"/>
                 <RowConstraints vgrow="ALWAYS"/>
+                <RowConstraints vgrow="NEVER"/>
             </rowConstraints>
             <ImageView fx:id="minosoftLogoFX" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                 <GridPane.margin>
@@ -44,6 +46,11 @@
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
             </Pane>
+            <Button fx:id="createCrashReportFX" maxWidth="Infinity" onAction="#createCrashReport" text="Create crash report" GridPane.rowIndex="3">
+                <GridPane.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </GridPane.margin>
+            </Button>
         </GridPane>
         <GridPane GridPane.columnIndex="1">
             <columnConstraints>
@@ -66,9 +73,7 @@
                 </GridPane.margin>
                 <Text text="Version abc&#10;Other text&#10;"/>
             </TextFlow>
-            <TextArea fx:id="copyrightFX" editable="false"
-                      text="Minosoft&#10;Copyright (C) 2020-2022 Moritz Zwerger and contributors&#10;&#10;This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.&#10;&#10;This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.&#10;&#10;You should have received a copy of the GNU General Public License along with this program. If not, see &lt;https://www.gnu.org/licenses/&gt;.&#10;&#10;This software is not affiliated with Mojang AB, the original developer of Minecraft."
-                      wrapText="true" GridPane.rowIndex="2">
+            <TextArea fx:id="copyrightFX" editable="false" text="Minosoft&#10;Copyright (C) 2020-2022 Moritz Zwerger and contributors&#10;&#10;This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.&#10;&#10;This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.&#10;&#10;You should have received a copy of the GNU General Public License along with this program. If not, see &lt;https://www.gnu.org/licenses/&gt;.&#10;&#10;This software is not affiliated with Mojang AB, the original developer of Minecraft." wrapText="true" GridPane.rowIndex="2">
                 <GridPane.margin>
                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
                 </GridPane.margin>
