--- a/src/main/resources/assets/minosoft/eros/main/account/checking.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/account/checking.fxml
@@ -13,18 +13,18 @@
   ~ This software is not affiliated with Mojang AB, the original developer of Minecraft.
   -->
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="130.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17">
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17">
     <GridPane VBox.vgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints vgrow="NEVER"/>
             <RowConstraints vgrow="NEVER"/>
             <RowConstraints minHeight="40.0" vgrow="NEVER"/>
             <RowConstraints vgrow="ALWAYS"/>
@@ -34,37 +34,19 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
         </VBox.margin>
         <TextFlow fx:id="headerFX">
-            <Text text="Minosoft is downloading assets..."/>
+            <Text text="Checking account..."/>
             <GridPane.margin>
                 <Insets bottom="10.0"/>
             </GridPane.margin>
         </TextFlow>
-        <GridPane GridPane.rowIndex="1">
-            <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS"/>
-                <ColumnConstraints hgrow="NEVER"/>
-                <ColumnConstraints hgrow="NEVER" minWidth="5.0" prefWidth="20.0"/>
-                <ColumnConstraints hgrow="NEVER"/>
-                <ColumnConstraints hgrow="ALWAYS"/>
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints vgrow="NEVER"/>
-            </rowConstraints>
-            <TextFlow fx:id="countTextFX" GridPane.columnIndex="1">
-                <Text text="50/100"/>
-            </TextFlow>
-            <TextFlow fx:id="mibTextFX" GridPane.columnIndex="3">
-                <Text text="0.0/10MiB"/>
-            </TextFlow>
-        </GridPane>
 
-        <ProgressBar fx:id="progressFX" maxHeight="Infinity" maxWidth="Infinity" progress="0.5" GridPane.rowIndex="2">
+        <ProgressBar fx:id="progressFX" maxHeight="Infinity" maxWidth="Infinity" progress="0.5" GridPane.rowIndex="1">
             <GridPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </GridPane.margin>
         </ProgressBar>
 
-        <GridPane GridPane.rowIndex="4">
+        <GridPane GridPane.rowIndex="3">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS"/>
                 <ColumnConstraints hgrow="NEVER"/>
@@ -72,11 +54,14 @@
             <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="NEVER"/>
             </rowConstraints>
-            <Button fx:id="cancelButtonFX" onAction="#cancel" text="Cancel" disable="true" GridPane.columnIndex="1">
+            <Button fx:id="cancelButtonFX" disable="true" onAction="#cancel" text="Cancel" GridPane.columnIndex="1">
                 <GridPane.margin>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
             </Button>
+            <GridPane.margin>
+                <Insets/>
+            </GridPane.margin>
         </GridPane>
     </GridPane>
 </VBox>
