--- a/src/main/resources/assets/minosoft/eros/main/account/add/microsoft.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/account/add/microsoft.fxml
@@ -14,29 +14,46 @@
   -->
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="90.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17"> <!-- fx:controller="de.bixilon.minosoft.gui.eros.main.account.add.MicrosoftAddController"-->
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="120.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18"> <!-- fx:controller="de.bixilon.minosoft.gui.eros.main.account.add.MicrosoftAddController"-->
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS"/>
         </columnConstraints>
         <rowConstraints>
+            <RowConstraints vgrow="NEVER"/>
+            <RowConstraints vgrow="NEVER"/>
             <RowConstraints vgrow="ALWAYS"/>
             <RowConstraints vgrow="NEVER"/>
         </rowConstraints>
-        <TextFlow fx:id="textFX" prefHeight="200.0" prefWidth="200.0">
+        <TextFlow fx:id="headerFX" prefHeight="200.0" prefWidth="200.0">
             <GridPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </GridPane.margin>
             <Text text="Please open https://microsoft.com/link and enter the following code to proceed with the login:"/>
         </TextFlow>
-        <TextField fx:id="codeFX" editable="false" promptText="Loading...." GridPane.rowIndex="1">
+        <TextField fx:id="codeFX" alignment="CENTER" editable="false" promptText="DUMMY-CODE" GridPane.rowIndex="1">
             <GridPane.margin>
                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
             </GridPane.margin>
         </TextField>
+        <GridPane GridPane.rowIndex="3">
+            <columnConstraints>
+                <ColumnConstraints hgrow="ALWAYS"/>
+                <ColumnConstraints hgrow="NEVER"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints vgrow="NEVER"/>
+            </rowConstraints>
+            <Button fx:id="cancelFX" onAction="#cancel" disable="true" text="Cancel" GridPane.columnIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </GridPane.margin>
+            </Button>
+        </GridPane>
     </GridPane>
 </HBox>
