--- a/src/main/resources/assets/minosoft/eros/dialog/modify_server.fxml
+++ b/src/main/resources/assets/minosoft/eros/dialog/modify_server.fxml
@@ -17,13 +17,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17"> <!--fx:controller="de.bixilon.minosoft.gui.eros.dialog.UpdateServerDialog" -->
+<HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18"> <!--fx:controller="de.bixilon.minosoft.gui.eros.dialog.UpdateServerDialog" -->
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS"/>
         </columnConstraints>
         <rowConstraints>
             <RowConstraints valignment="CENTER" vgrow="ALWAYS"/>
+            <RowConstraints/>
             <RowConstraints/>
             <RowConstraints/>
         </rowConstraints>
@@ -116,13 +117,13 @@
                 </GridPane.margin>
                 <Text text="Profiles"/>
             </TextFlow>
-            <Button fx:id="openProfileSelectDialogButtonFX" onAction="#openProfileSelectDialog" maxWidth="Infinity" text="Open profile select dialog" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Button fx:id="openProfileSelectDialogButtonFX" maxWidth="Infinity" onAction="#openProfileSelectDialog" text="Open profile select dialog" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
                 <GridPane.margin>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
             </Button>
         </GridPane>
-        <GridPane GridPane.rowIndex="2">
+        <GridPane GridPane.rowIndex="3">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS"/>
                 <ColumnConstraints hgrow="NEVER"/>
@@ -143,5 +144,11 @@
                 </GridPane.margin>
             </Button>
         </GridPane>
+        <FlowPane GridPane.rowIndex="2">
+            <GridPane.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+            </GridPane.margin>
+            <CheckBox fx:id="optionQueryVersionFX" text="Query version"/>
+        </FlowPane>
     </GridPane>
 </HBox>
