--- a/src/main/resources/assets/minosoft/eros/main/mods/mod_type_card.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/mods/mod_type_card.fxml
@@ -13,36 +13,45 @@
   ~ This software is not affiliated with Mojang AB, the original developer of Minecraft.
   -->
 
-<?import de.bixilon.minosoft.gui.eros.main.InfoPane?>
+<?import de.bixilon.minosoft.util.PixelImageView?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.*?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="Infinity" maxWidth="Infinity" prefHeight="500.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.profiles.ProfilesListController">
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.TextFlow?>
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="80.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/18" fx:controller="de.bixilon.minosoft.gui.eros.main.mods.ModCardController">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES"/>
+            <ColumnConstraints hgrow="NEVER"/>
+            <ColumnConstraints hgrow="ALWAYS"/>
         </columnConstraints>
         <rowConstraints>
             <RowConstraints vgrow="ALWAYS"/>
-            <RowConstraints vgrow="NEVER"/>
         </rowConstraints>
-        <GridPane GridPane.rowIndex="1">
+        <GridPane GridPane.columnIndex="1">
+            <TextFlow fx:id="nameFX" style="-fx-font-weight: bold; -fx-font-size: 20;">
+                <GridPane.margin>
+                    <Insets bottom="5.0" right="5.0" top="5.0"/>
+                </GridPane.margin>
+                <Text text="Name"/>
+            </TextFlow>
+            <TextFlow fx:id="descriptionFX" GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="5.0" right="5.0"/>
+                </GridPane.margin>
+                <Text text="Text 1"/>
+            </TextFlow>
             <columnConstraints>
-                <ColumnConstraints hgrow="ALWAYS"/>
-                <ColumnConstraints hgrow="NEVER"/>
+                <ColumnConstraints/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints vgrow="NEVER"/>
+                <RowConstraints/>
+                <RowConstraints/>
             </rowConstraints>
-            <Button fx:id="createProfileButtonFX" onAction="#createProfile" text="Create profile" GridPane.columnIndex="1"/>
+        </GridPane>
+        <PixelImageView fx:id="imageFX" height="100" width="100">
             <GridPane.margin>
-                <Insets top="5.0"/>
+                <Insets left="5.0" right="15.0"/>
             </GridPane.margin>
-        </GridPane>
-        <GridPane>
-            <ListView fx:id="profilesListViewFX" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS"/>
-            <InfoPane fx:id="profileInfoFX" minHeight="0.0" minWidth="0.0" GridPane.columnIndex="1"/>
-        </GridPane>
+        </PixelImageView>
     </GridPane>
 </HBox>
