--- a/src/main/resources/assets/minosoft/eros/main/play/server/server_list.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/play/server/server_list.fxml
@@ -13,6 +13,7 @@
   ~ This software is not affiliated with Mojang AB, the original developer of Minecraft.
   -->
 
+<?import de.bixilon.minosoft.gui.eros.main.InfoPane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -58,7 +59,7 @@
         </GridPane>
         <GridPane>
             <ListView fx:id="serverListViewFX" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS"/>
-            <AnchorPane fx:id="serverInfoFX" minHeight="0.0" minWidth="0.0" GridPane.columnIndex="1"/>
+            <InfoPane fx:id="serverInfoFX" minHeight="0.0" minWidth="0.0" GridPane.columnIndex="1"/>
         </GridPane>
     </GridPane>
 </HBox>
