--- a/src/main/resources/assets/minosoft/eros/dialog/simple_warning.fxml
+++ b/src/main/resources/assets/minosoft/eros/dialog/simple_warning.fxml
@@ -83,7 +83,7 @@
                 <Insets bottom="10.0" right="5.0"/>
             </GridPane.margin>
         </GridPane>
-        <FontIcon iconColor="#FFCC00" iconLiteral="fas-exclamation-triangle" iconSize="150">
+        <FontIcon styleClass="warning-icon" iconColor="#FFCC00" iconLiteral="fas-exclamation-triangle" iconSize="150">
             <GridPane.margin>
                 <Insets left="5.0" right="10.0"/>
             </GridPane.margin>
