--- a/src/main/resources/assets/minosoft/eros/dialog/profiles/create.fxml
+++ b/src/main/resources/assets/minosoft/eros/dialog/profiles/create.fxml
@@ -3,7 +3,7 @@
 
 <!--
   ~ Minosoft
-  ~ Copyright (C) 2020-2022 Moritz Zwerger
+  ~ Copyright (C) 2020-2023 Moritz Zwerger
   ~
   ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
   ~
@@ -15,7 +15,9 @@
   -->
 
 <?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="200.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16">
@@ -53,7 +55,6 @@
             <rowConstraints>
                 <RowConstraints valignment="CENTER" vgrow="NEVER"/>
                 <RowConstraints valignment="CENTER" vgrow="NEVER"/>
-                <RowConstraints valignment="CENTER" vgrow="NEVER"/>
             </rowConstraints>
 
             <TextFlow fx:id="typeLabelFX">
@@ -75,18 +76,6 @@
                 <Text text="Name"/>
             </TextFlow>
             <TextField fx:id="nameFX" promptText="Name" GridPane.rowIndex="1" GridPane.columnIndex="1">
-                <GridPane.margin>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                </GridPane.margin>
-            </TextField>
-
-            <TextFlow fx:id="descriptionLabelFX" GridPane.rowIndex="2">
-                <GridPane.margin>
-                    <Insets bottom="5.0" left="5.0" right="30.0" top="5.0"/>
-                </GridPane.margin>
-                <Text text="Name"/>
-            </TextFlow>
-            <TextField fx:id="descriptionFieldFX" promptText="Description" GridPane.rowIndex="2" GridPane.columnIndex="1">
                 <GridPane.margin>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
