--- a/src/main/resources/assets/minosoft/eros/dialog/profiles/select.fxml
+++ b/src/main/resources/assets/minosoft/eros/dialog/profiles/select.fxml
@@ -2,7 +2,7 @@
 
 <!--
   ~ Minosoft
-  ~ Copyright (C) 2020-2022 Moritz Zwerger
+  ~ Copyright (C) 2020-2023 Moritz Zwerger
   ~
   ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
   ~
@@ -39,7 +39,7 @@
         <TableView fx:id="profilesFX" editable="true" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1">
             <columns>
                 <TableColumn fx:id="typeColumnFX" minWidth="220.0" prefWidth="220.0" sortable="false" reorderable="false" text="Type"/>
-                <TableColumn fx:id="profileColumnFX" maxWidth="1.7976931348623157E308" minWidth="-1.0" prefWidth="-1.0" sortable="false" reorderable="false" text="Profile"/>
+                <TableColumn fx:id="profileColumnFX" maxWidth="Infinity" minWidth="-1.0" prefWidth="-1.0" sortable="false" reorderable="false" text="Profile"/>
             </columns>
             <GridPane.margin>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
